--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#5f9ea0" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -15,7 +15,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,600&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>My Bakup Cloud</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
